--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="style.css" />
-		<title>Components</title>
+		<title>Accordion Components</title>
 	</head>
 	<body>
 		<script src="script.js"></script>
