Add accordion component structure and styling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<title>Accordion Components</title>
 	</head>
 	<body>
+		<div class="accordion"></div>
 		<script src="script.js"></script>
 	</body>
 </html>
