Add accordion content structure to index.html

--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
 			rel="stylesheet"
 		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-			rel="stylesheet"
-		/>
 		<link rel="stylesheet" href="style.css" />
 		<title>Accordion Components</title>
 	</head>
 	<body>
-		<div class="accordion"></div>
+		<div class="accordion">
+			<p class="number">02</p>
+			<p class="text">How long do I have tp return my chair</p>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				fill="none"
+				viewBox="0 0 24 24"
+				stroke-width="1.5"
+				stroke="currentColor"
+				class="size-6"
+			>
+				<path
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					d="m19.5 8.25-7.5 7.5-7.5-7.5"
+				/>
+			</svg>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
