--- a/index.html
+++ b/index.html
@@ -14,22 +14,37 @@
 	</head>
 	<body>
 		<div class="accordion">
-			<p class="number">02</p>
-			<p class="text">How long do I have tp return my chair</p>
-			<svg
-				xmlns="http://www.w3.org/2000/svg"
-				fill="none"
-				viewBox="0 0 24 24"
-				stroke-width="1.5"
-				stroke="currentColor"
-				class="icon"
-			>
-				<path
-					stroke-linecap="round"
-					stroke-linejoin="round"
-					d="m19.5 8.25-7.5 7.5-7.5-7.5"
-				/>
-			</svg>
+			<div class="item">
+				<p class="number">02</p>
+				<p class="text">How long do I have tp return my chair</p>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					fill="none"
+					viewBox="0 0 24 24"
+					stroke-width="1.5"
+					stroke="currentColor"
+					class="icon"
+				>
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						d="m19.5 8.25-7.5 7.5-7.5-7.5"
+					/>
+				</svg>
+				<div class="hidden-box">
+					<p>
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+						facilis ad repellat laudantium delectus maiores sed fuga ab
+						quibusdam dolorem fugiat tenetur asperiores. Eveniet, adipisci
+						repellendus quisquam ab id sed.
+					</p>
+					<ul>
+						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+						<li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
+						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<script src="script.js"></script>
 	</body>
