Refactor accordion content for improved readability and structure

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 					<p>
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat,
 						facilis ad repellat laudantium delectus maiores sed fuga ab
-						quibusdam dolorem fugiat tenetur asperiores. Eveniet, adipisci
-						repellendus quisquam ab id sed.
+						quibusdam dolorem fugiat tenetur asperiores. Eveniet.
 					</p>
 					<ul>
 						<li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
