--- a/index.html
+++ b/index.html
@@ -17,21 +17,23 @@
 			<div class="item">
 				<p class="number">01</p>
 				<p class="text">Where are these chairs assembled</p>
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					fill="none"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					class="icon"
-				>
-					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						d="m19.5 8.25-7.5 7.5-7.5-7.5"
-					/>
-				</svg>
-				<div class="hidden-box">
+				<button class="btn">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						fill="none"
+						viewBox="0 0 24 24"
+						stroke-width="1.5"
+						stroke="currentColor"
+						class="icon"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							d="m19.5 8.25-7.5 7.5-7.5-7.5"
+						/>
+					</svg>
+				</button>
+				<div class="box">
 					<p>
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat,
 						facilis ad repellat laudantium delectus maiores sed fuga ab
@@ -48,21 +50,24 @@
 			<div class="item">
 				<p class="number">02</p>
 				<p class="text">How long do I have tp return my chair</p>
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					fill="none"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					class="icon"
-				>
-					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						d="m19.5 8.25-7.5 7.5-7.5-7.5"
-					/>
-				</svg>
-				<div class="box hidden-box">
+				<button class="btn">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						fill="none"
+						viewBox="0 0 24 24"
+						stroke-width="1.5"
+						stroke="currentColor"
+						class="icon"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							d="m19.5 8.25-7.5 7.5-7.5-7.5"
+						/>
+					</svg>
+				</button>
+
+				<div class="box">
 					<p>
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat,
 						facilis ad repellat laudantium delectus maiores sed fuga ab
@@ -80,21 +85,23 @@
 			<div class="item">
 				<p class="number">03</p>
 				<p class="text">Do you ship to countries outside EU</p>
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					fill="none"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					class="icon"
-				>
-					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						d="m19.5 8.25-7.5 7.5-7.5-7.5"
-					/>
-				</svg>
-				<div class="hidden-box">
+				<button class="btn">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						fill="none"
+						viewBox="0 0 24 24"
+						stroke-width="1.5"
+						stroke="currentColor"
+						class="icon"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							d="m19.5 8.25-7.5 7.5-7.5-7.5"
+						/>
+					</svg>
+				</button>
+				<div class="box">
 					<p>
 						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat,
 						facilis ad repellat laudantium delectus maiores sed fuga ab
